[package]
name = "CodeQuill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
uuid = { version = "1", features = ["v4"] }
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"